--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -1,17 +1,17 @@
 # These file filter patterns are used by the action https://github.com/dorny/paths-filter
 
-frontend-test-lint-code: &frontend-test-lint-code
-  - '**/*'
+presenter-test-lint-code: &presenter-test-lint-code
+  - 'presenter/**/*'
 
-frontend-test-unit-code: &frontend-test-unit-code
-  - '**/*'
+presenter-test-unit-code: &presenter-test-unit-code
+  - 'presenter/**/*'
 
-frontend-test-build-code: &frontend-test-build-code
-  - '**/*'
+presenter-test-build-code: &presenter-test-build-code
+  - 'presenter/**/*'
 
-frontend-test-build-docs: &frontend-test-build-docs
-  - '**/*.md'
-  - '.vuepress/*'
+presenter-test-build-docs: &presenter-test-build-docs
+  - 'presenter/**/*.md'
+  - 'presenter/.vuepress/*'
 
-frontend-test-build-storybook: &frontend-test-build-storybook
-  - '**/*'
+presenter-test-build-storybook: &presenter-test-build-storybook
+  - 'presenter/**/*'
