--- a/.github/workflows/presenter.test.build.code.yml
+++ b/.github/workflows/presenter.test.build.code.yml
@@ -1,4 +1,4 @@
-name: "frontend:test:build test code"
+name: "presenter:test:build test code"
 
 on: push
 
@@ -6,14 +6,14 @@ jobs:
   # only (but most important) job from this workflow required for pull requests
   # check results serve as run conditions for all other jobs here
   files-changed:
-    name: Detect File Changes - frontend-test-build-code
+    name: Detect File Changes - presenter-test-build-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-code }}
+      changes: ${{ steps.changes.outputs.presenter-test-build-code }}
     steps:
       - uses: actions/checkout@v3.3.0
 
-      - name: Check for frontend file changes
+      - name: Check for presenter file changes
         uses: dorny/paths-filter@v2.11.1
         id: changes
         with:
@@ -23,12 +23,12 @@ jobs:
 
   build:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build - Frontend
+    name: Build - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Frontend | Build
+      - name: Presenter | Build
         run: npm install && npm run build
