--- a/.github/workflows/presenter.test.build.storybook.yml
+++ b/.github/workflows/presenter.test.build.storybook.yml
@@ -26,9 +26,12 @@ jobs:
     name: Build Storybook - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Presenter | Build Storybook
         run: npm install && npm run storybook:build
+        working-directory: ${{env.WORKING_DIRECTORY}}
