--- a/.github/workflows/presenter.test.lint.code.yml
+++ b/.github/workflows/presenter.test.lint.code.yml
@@ -26,9 +26,12 @@ jobs:
     name: Lint - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Presenter | Lint
         run: npm install && npm run test:lint
+        working-directory: ${{env.WORKING_DIRECTORY}}
