Restore only on push on master

--- a/.github/workflows/presenter.deploy.docs.yml
+++ b/.github/workflows/presenter.deploy.docs.yml
@@ -1,7 +1,8 @@
 name: "presenter:deploy:docs to github"
-on: push
-    # branches:
-    #   - master
+on: 
+  push:
+    branches:
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
