test code workflow

--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -1,5 +1,8 @@
 # These file filter patterns are used by the action https://github.com/dorny/paths-filter
 
+test-code: &test-code
+  - '**/*'
+
 presenter-test-lint-code: &presenter-test-lint-code
   - 'presenter/**/*'
 
