--- a/.github/workflows/deploy.docs.yml
+++ b/.github/workflows/deploy.docs.yml
@@ -1,8 +1,9 @@
 name: "dreammall:deploy:docs to github"
-on:
-  push:
-    branches:
-      - master
+#on:
+#  push:
+#    branches:
+#      - master
+on: push
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
