--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [
     "dreammall",
-    "dreammall.earth"
+    "dreammall-earth"
   ],
   "author": {
     "name": "Ulf Gebhardt"
