--- a/.github/workflows/deploy.docs.yml
+++ b/.github/workflows/deploy.docs.yml
@@ -1,9 +1,9 @@
 name: "dreammall:deploy:docs to github"
-#on:
-#  push:
-#    branches:
-#      - master
-on: push
+
+on:
+  push:
+    branches:
+      - master
 
 permissions:
   contents: write
