--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -2,18 +2,20 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  proxy_http_version 1.1;
-  proxy_set_header   Upgrade $http_upgrade;
-  proxy_set_header   Connection 'upgrade';
-  proxy_set_header   X-Forwarded-For $remote_addr;
-  proxy_set_header   X-Real-IP  $remote_addr;
-  proxy_set_header   Host $host;
+  location / {
+      proxy_http_version 1.1;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection 'upgrade';
+      proxy_set_header   X-Forwarded-For $remote_addr;
+      proxy_set_header   X-Real-IP  $remote_addr;
+      proxy_set_header   Host $host;
 
-  proxy_pass         http://127.0.0.1:3000/;
-  proxy_redirect     off;
+      proxy_pass         http://127.0.0.1:3000/;
+      proxy_redirect     off;
+  }
 
   location /docs {
-      root /var/www/localhost/htdocs/build/docs/;
+      alias /var/www/localhost/htdocs/dreammall.earth/build/docs;
       index index.html;
 
       try_files $uri $uri/ =404;
