test docs workflow

--- a/.github/workflows/deploy.docs.yml
+++ b/.github/workflows/deploy.docs.yml
@@ -1,9 +1,10 @@
 name: "dreammall:deploy:docs to github"
 
-on:
-  push:
-    branches:
-      - master
+#on:
+#  push:
+#    branches:
+#      - master
+on: push
 
 permissions:
   contents: write
