--- a/package.json
+++ b/package.json
@@ -25,11 +25,22 @@
     "graphql": "^16.8.1"
   },
   "devDependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-vitest": "^0.3.10",
+    "eslint-plugin-yml": "^1.10.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
