--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-vitest": "^0.3.10",
     "eslint-plugin-yml": "^1.10.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "tsc-watch": "^6.0.4",
