--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -1,3 +1,3 @@
 # META
-PUBLIC_ENV__META__DEFAULT_TITLE="IT4C"
-PUBLIC_ENV__META__DEFAULT_DESCRIPTION="IT4C Frontend Boilerplate"
+PUBLIC_ENV__META__DEFAULT_TITLE="DreamMall"
+PUBLIC_ENV__META__DEFAULT_DESCRIPTION="DreamMall Client"
