--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "scripts": {
     "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --loader ts-node/esm' src/index.ts",
     "dev": "tsc-watch  --noClear --onSuccess \"npm run watch\"",
-    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore ."
+    "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
+    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore .",
+    "test:lint:remark": "remark . --quiet --frail"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
@@ -43,6 +45,11 @@
     "eslint-plugin-yml": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
+    "remark-cli": "^12.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-markdown-style-guide": "^5.1.3",
+    "remark-preset-lint-recommended": "^6.1.3",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "tsc-watch": "^6.0.4",
