--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "ESNext",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "module": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
+    "baseUrl": ".",
+    "lib": ["ESNext"],
     "paths": {
       "#types/*": ["./src/graphql/types/*"]
     },
@@ -12,5 +14,8 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
+  },
+  "ts-node": {
+    "experimentalSpecifierResolution": "node"
   }
 }
