--- a/package.json
+++ b/package.json
@@ -16,13 +16,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "server": "node --loader ts-node/esm ./src/index.ts",
-    "server:dev": "npm run server",
-    "server:prod": "NODE_ENV=production npm run server",
-    "gdd": "TZ=UTC nodemon -w src --ext ts,pug,json,css --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "watch2": "nodemon -w src --ext ts,pug,json,css --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm' src/index.ts",
-    "dev": "tsc-watch --noClear --onSuccess \"npm run watch\"",
+    "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore .",
     "test:lint:remark": "remark . --quiet --frail"
