--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "paths": {
       "#types/*": ["./src/graphql/types/*"]
     },
-    "outDir": "./build",
+    "outDir": "./build/src",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
