--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore .",
-    "test:lint:remark": "remark . --quiet --frail"
+    "test:lint:remark": "remark . --quiet --frail",
+    "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
@@ -31,9 +32,11 @@
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "apollo-server-testing": "^2.25.3",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -45,6 +48,7 @@
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-vitest": "^0.3.10",
     "eslint-plugin-yml": "^1.10.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "remark-cli": "^12.0.0",
@@ -52,12 +56,15 @@
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-preset-lint-recommended": "^6.1.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2"
   },
   "imports": {
-    "#types/*": "./src/graphql/types/*"
+    "#graphql/*": "./src/graphql/*",
+    "#types/*": "./src/graphql/types/*",
+    "#test/*": "./test/*"
   }
 }
