--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore .",
     "test:lint:remark": "remark . --quiet --frail",
-    "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles"
+    "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
+    "test": "npm run test:lint && npm run test:unit"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
