--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 --ignore-path .gitignore .",
     "test:lint:remark": "remark . --quiet --frail",
     "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
-    "test": "npm run test:lint && npm run test:unit"
+    "test": "npm run test:lint && npm run test:unit",
+    "update": "npx npm-check-update"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
