updated lint rules for css selector to contain "__"

--- a/presenter/.stylelintrc.json
+++ b/presenter/.stylelintrc.json
@@ -1,4 +1,7 @@
 {
+    "rules": {
+        "selector-class-pattern": "^([a-z][a-z0-9]*)((--?|__)?[a-z0-9]+)*$"
+    },
     "extends": [
         "stylelint-config-standard",
         "stylelint-config-standard-scss",
