--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "graphql": "^15.3.0",
+    "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
@@ -38,7 +40,7 @@
     "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "apollo-server-testing": "^2.25.3",
+    "apollo-server-testing": "^2.20.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
