--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "update": "npx npm-check-update"
   },
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
+    "@apollo/server": "^4.9.5",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "reflect-metadata": "^0.1.13",
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -66,7 +65,8 @@
   },
   "imports": {
     "#graphql/*": "./src/graphql/*",
-    "#types/*": "./src/graphql/types/*",
-    "#test/*": "./test/*"
+    "#src/*": "./src/*",
+    "#test/*": "./test/*",
+    "#types/*": "./src/graphql/types/*"
   }
 }
