--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
+    "start": "TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
     "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "db:migrate": "TZ=UTC npx prisma migrate dev",
     "db:reset": "TZ=UTC npx prisma migrate reset --force",
@@ -40,6 +40,7 @@
     "graphql-scalars": "^1.22.4",
     "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
+    "tsconfig-paths": "^4.2.0",
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
@@ -70,7 +71,6 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2",
     "vuepress": "^2.0.0-rc.0"
   },
