--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "#test/*": ["./test/*"],
       "#types/*": ["./src/graphql/types/*"]
     },
-    "outDir": "./build/src",
+    "outDir": "./build",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
