--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-vitest": "^0.3.10",
     "eslint-plugin-yml": "^1.10.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
