--- a/.github/workflows/backend.test.unit.code.yml
+++ b/.github/workflows/backend.test.unit.code.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Backend | Unit
-        run: npm install && npm run test:unit
+        run: npm install && npm run db:migrate && npm run test:unit
