--- a/presenter/.eslintrc.json
+++ b/presenter/.eslintrc.json
@@ -134,7 +134,7 @@
             "files": ["*.ts", "*.tsx"],
             "parser": "@typescript-eslint/parser",
             "parserOptions": {
-                "tsconfigRootDir": ".",
+                "tsconfigRootDir": "./presenter",
                 "project": ["./tsconfig.json", "**/tsconfig.json"],
                 "ecmaVersion": "latest",
                 "parser": "@typescript-eslint/parser",
