--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -122,7 +122,7 @@
             "files": ["*.ts", "*.tsx"],
             "parser": "@typescript-eslint/parser",
             "parserOptions": {
-                "tsconfigRootDir": ".",
+                "tsconfigRootDir": "./backend",
                 "project": ["./tsconfig.json", "**/tsconfig.json"],
                 "ecmaVersion": "latest",
                 "parser": "@typescript-eslint/parser",
