--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:reset": "TZ=UTC npx prisma migrate reset --force",
     "db:seed": "TZ=UTC npx prisma db seed",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
-    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.json,.yml,.yaml --max-warnings 0 .",
+    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:lint:remark": "remark . --quiet --frail",
     "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
     "test": "npm run test:lint && npm run test:unit",
