moved all backend ci workflows to .github folder and adjust accordingly

--- a/.github/workflows/backend.test.build.docs.yml
+++ b/.github/workflows/backend.test.build.docs.yml
@@ -26,9 +26,12 @@ jobs:
     name: Build Docs - Backend
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Backend | Build Docs
         run: npm install && npm run docs:build
+        working-directory: ${{env.WORKING_DIRECTORY}}
