--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -3,6 +3,7 @@
 test-code: &test-code
   - '**/*'
 
+# presenter
 presenter-test-lint-code: &presenter-test-lint-code
   - 'presenter/**/*'
 
@@ -18,3 +19,17 @@ presenter-test-build-docs: &presenter-test-build-docs
 
 presenter-test-build-storybook: &presenter-test-build-storybook
   - 'presenter/**/*'
+
+# backend
+backend-test-lint-code: &backend-test-lint-code
+  - 'backend/**/*'
+
+backend-test-unit-code: &backend-test-unit-code
+  - 'backend/**/*'
+
+backend-test-build-code: &backend-test-build-code
+  - 'backend/**/*'
+
+backend-test-build-docs: &backend-test-build-docs
+  - 'backend/**/*.md'
+  - 'backend/.vuepress/*'
