--- a/.github/workflows/backend.test.lint.code.yml
+++ b/.github/workflows/backend.test.lint.code.yml
@@ -1,15 +1,15 @@
-name: "backend:test:build test code"
+name: "backend:test:lint code with defined linters"
 
 on: push
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
-  # check results serve as run conditions for all other jobs here
+  # check results serve as run conditions for all other jobs here 
   files-changed:
-    name: Detect File Changes - backend-test-build-code
+    name: Detect File Changes - backend-test-lint-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.backend-test-build-code }}
+      changes: ${{ steps.changes.outputs.backend-test-lint-code }}
     steps:
       - uses: actions/checkout@v3.3.0
 
@@ -21,14 +21,17 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  build:
+  lint:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build - Backend
+    name: Lint - Backend
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Backend | Build
-        run: npm install && npm run build
+      - name: Backend | Lint
+        run: npm install && npm run test:lint
+        working-directory: ${{env.WORKING_DIRECTORY}}
