--- a/.github/workflows/backend.test.unit.code.yml
+++ b/.github/workflows/backend.test.unit.code.yml
@@ -26,9 +26,12 @@ jobs:
     name: Unit - Backend
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Backend | Unit
         run: npm install && npm run db:migrate && npm run test:unit
+        working-directory: ${{env.WORKING_DIRECTORY}}
