start mariadb databse for backend unit tests

--- a/.github/workflows/backend.test.unit.code.yml
+++ b/.github/workflows/backend.test.unit.code.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Backend | docker-compose database
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml up --detach --no-deps database
+        
       - name: Backend | Unit
         run: npm install && npm run db:migrate && npm run test:unit
         working-directory: ${{env.WORKING_DIRECTORY}}
