--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -1,3 +1,6 @@
+# Endpoints
+PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
+
 # META
 PUBLIC_ENV__META__DEFAULT_TITLE="DreamMall"
 PUBLIC_ENV__META__DEFAULT_DESCRIPTION="DreamMall Client"
