--- a/presenter/package.json
+++ b/presenter/package.json
@@ -58,17 +58,22 @@
     "update": "npx npm-check-update"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@intlify/unplugin-vue-i18n": "^1.5.0",
     "@mdi/font": "^7.3.67",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vue/apollo-composable": "^4.0.0-beta.12",
+    "@vue/apollo-option": "^4.0.0-beta.12",
     "@vue/compiler-sfc": "^3.3.8",
     "@vue/server-renderer": "^3.3.8",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
