--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "class-validator": "^0.14.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -76,6 +77,7 @@
   },
   "imports": {
     "#graphql/*": "./src/graphql/*",
+    "#inputs/*": "./src/graphql/inputs/*",
     "#src/*": "./src/*",
     "#test/*": "./test/*",
     "#types/*": "./src/graphql/types/*"
