--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,7 @@
     "lib": ["ESNext"],
     "paths": {
       "#graphql/*": ["./src/graphql/*"],
+      "#inputs/*": ["./src/graphql/inputs/*"],
       "#src/*": ["./src/*"],
       "#test/*": ["./test/*"],
       "#types/*": ["./src/graphql/types/*"]
@@ -16,6 +17,7 @@
     "outDir": "./build",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictPropertyInitialization": false
   }
 }
