--- a/backend/package.json
+++ b/backend/package.json
@@ -69,7 +69,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.2"
   },
   "imports": {
     "#graphql/*": "./src/graphql/*",
