--- a/presenter/package.json
+++ b/presenter/package.json
@@ -134,6 +134,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "vite-plugin-checker": "^0.6.2",
     "vitest": "^0.34.6",
     "vuepress": "^2.0.0-rc.0"
   },
