--- a/presenter/package.json
+++ b/presenter/package.json
@@ -136,6 +136,7 @@
     "stylelint-config-standard-scss": "^11.1.0",
     "vite-plugin-checker": "^0.6.2",
     "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.25",
     "vuepress": "^2.0.0-rc.0"
   },
   "imports": {
