--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@getbrevo/brevo": "^2.0.0-beta.4",
     "@prisma/client": "^5.7.0",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
