--- a/presenter/package.json
+++ b/presenter/package.json
@@ -149,6 +149,7 @@
     "#stores/*": "./src/stores/*",
     "#plugins/*": "./renderer/plugins/*",
     "#context/*": "./renderer/context/*",
-    "#types/*": "./types/*"
+    "#types/*": "./types/*",
+    "#mutations/*": "./src/graphql/mutations/*"
   }
 }
