--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "^5.7.0",
     "@sendinblue/client": "^3.3.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "reflect-metadata": "^0.1.13",
