Refactor code, move NewsletterBrevo in api and use it in graphql/resolver/ContactFormResolver.ts

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,7 @@
     "baseUrl": ".",
     "lib": ["ESNext"],
     "paths": {
+      "#api/*": ["./src/api/*"],
       "#config/*": ["./src/config/*"],
       "#graphql/*": ["./src/graphql/*"],
       "#inputs/*": ["./src/graphql/inputs/*"],
