--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -14,6 +14,18 @@ server {
       proxy_redirect     off;
   }
 
+  location /api {
+      proxy_http_version 1.1;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection 'upgrade';
+      proxy_set_header   X-Forwarded-For $remote_addr;
+      proxy_set_header   X-Real-IP  $remote_addr;
+      proxy_set_header   Host $host;
+
+      proxy_pass         http://127.0.0.1:4000/;
+      proxy_redirect     off;
+  }
+
   location /docs {
       alias /var/www/localhost/htdocs/dreammall.earth/build/docs;
       index index.html;
