--- a/backend/package.json
+++ b/backend/package.json
@@ -80,6 +80,8 @@
     "vuepress": "^2.0.0-rc.0"
   },
   "imports": {
+    "#api/*": "./src/api/*",
+    "#config/*": "./src/config/*",
     "#graphql/*": "./src/graphql/*",
     "#inputs/*": "./src/graphql/inputs/*",
     "#src/*": "./src/*",
