--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "start": "TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
     "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "db:migrate": "TZ=UTC npx prisma migrate dev",
+    "db:migrate:deploy": "TZ=UTC npx prisma migrate deploy",
     "db:reset": "TZ=UTC npx prisma migrate reset --force",
     "db:seed": "TZ=UTC npx prisma db seed",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
