Add Brevo to name and email.

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,2 +1,4 @@
 BREVO_KEY=""
+BREVO_CONTACT_REQUEST_TO_NAME=""
+BREVO_CONTACT_REQUEST_TO_EMAIL=""
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
