--- a/presenter/package.json
+++ b/presenter/package.json
@@ -37,10 +37,11 @@
   "scripts": {
     "dev": "npm run server:dev",
     "prod": "npm run build && npm run server:prod",
-    "build": "vite build",
+    "build": "vite build && npm run server:bundle",
     "server": "node --loader ts-node/esm ./server/index.ts",
     "server:dev": "npm run server",
     "server:prod": "cross-env NODE_ENV=production npm run server",
+    "server:bundle": "tsx scripts/bundleServer/bundleServer",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build -o build/storybook",
     "storybook:test": "test-storybook",
@@ -134,6 +135,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "tsx": "^4.6.2",
     "vite-plugin-checker": "^0.6.2",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.25",
