feat(presenter): connect newsletter to backend

--- a/presenter/tsconfig.json
+++ b/presenter/tsconfig.json
@@ -20,6 +20,7 @@
       "#plugins/*": ["./renderer/plugins/*"],
       "#context/*": ["./renderer/context/*"],
       "#types/*": ["./types/*"],
+      "#mutations/*": ["./src/graphql/mutations/*"],
       "#root/*": ["./*"]
     }
   },
