--- a/presenter/package.json
+++ b/presenter/package.json
@@ -151,6 +151,7 @@
     "#plugins/*": "./renderer/plugins/*",
     "#context/*": "./renderer/context/*",
     "#types/*": "./types/*",
+    "#mutations/*": "./src/graphql/mutations/*",
     "#root/*": "./*"
   }
 }
