--- a/presenter/package.json
+++ b/presenter/package.json
@@ -120,6 +120,7 @@
     "eslint-plugin-vuetify": "^2.1.0",
     "eslint-plugin-yml": "^1.10.0",
     "happy-dom": "^12.10.3",
+    "mock-apollo-client": "^1.2.1",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
