--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -9,6 +9,8 @@ server {
       proxy_set_header   X-Forwarded-For $remote_addr;
       proxy_set_header   X-Real-IP  $remote_addr;
       proxy_set_header   Host $host;
+      proxy_buffers      4 512k;
+      proxy_buffer_size  256k;
 
       proxy_pass         http://127.0.0.1:3000/;
       proxy_redirect     off;
