--- a/presenter/package.json
+++ b/presenter/package.json
@@ -37,12 +37,12 @@
   "scripts": {
     "dev": "npm run server:dev",
     "prod": "npm run build && npm run server:prod",
-    "build": "vite build && npm run server:bundle",
+    "build": "vite build && npm run server:build",
     "server": "node --loader ts-node/esm ./server/index.ts",
     "server:dev": "npm run server",
-    "server:prod": "cross-env NODE_ENV=production node ./build/index.cjs",
+    "server:prod": "node ./build/index.cjs",
     "server:prod:ts": "cross-env NODE_ENV=production npm run server",
-    "server:bundle": "tsx scripts/bundleServer/bundleServer",
+    "server:build": "tsx scripts/buildServer/buildServer",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build -o build/storybook",
     "storybook:test": "test-storybook",
