--- a/presenter/package.json
+++ b/presenter/package.json
@@ -137,6 +137,7 @@
     "stylelint-config-standard-scss": "^11.1.0",
     "tsx": "^4.6.2",
     "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.25",
     "vuepress": "^2.0.0-rc.0"
@@ -153,5 +154,10 @@
     "#context/*": "./renderer/context/*",
     "#types/*": "./types/*",
     "#root/*": "./*"
+  },
+  "overrides": {
+    "vite-plugin-vuetify": {
+      "vite": "$vite"
+    }
   }
 }
