--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -3,4 +3,5 @@ BREVO_CONTACT_REQUEST_TO_NAME=""
 BREVO_CONTACT_REQUEST_TO_EMAIL=""
 BREVO_TEMPLATE_CONTACT_BASE="1"
 BREVO_TEMPLATE_CONTACT_USER="2"
+BREVO_CONTACT_LIST_ID="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
