--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:lint:remark": "remark . --quiet --frail",
-    "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
+    "test:unit": "DOTENV_CONFIG_PATH=.env.test TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
     "test": "npm run test:lint && npm run test:unit",
     "docs:dev": "vuepress dev .",
     "docs:build": "vuepress build .",
