--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dreammall.earth",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Dreammall.earth website & product page",
   "main": "build/index.js",
   "type": "module",
@@ -26,7 +26,7 @@
     "test": "npm run test:lint",
     "docs:dev": "vuepress dev .",
     "docs:build": "vuepress build .",
-    "update": "npx npm-check-update"
+    "release": "scripts/release.sh"
   },
   "dependencies": {
   },
