permissions for contents not all

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,8 @@ name: "dreammall:release to github"
 #      - master
 on: push
 
-permissions: write-all
+permissions:
+  contents: write
 
 jobs:
   # JOB: GITHUB TAG LATEST VERSION #############################################
