--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: "dreammall:release to github"
 
-#on:
-#  push:
-#    branches:
-#      - master
-on: push
+on:
+  push:
+    branches:
+      - master
 
 permissions:
   contents: write
