--- a/presenter/package.json
+++ b/presenter/package.json
@@ -114,6 +114,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-local-rules": "^2.0.1",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^2.1.0",
