--- a/presenter/package.json
+++ b/presenter/package.json
@@ -101,8 +101,9 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^7.6.6",
     "@storybook/vue3-vite": "^7.6.6",
+    "@types/eslint": "^8.56.1",
     "@types/validator": "^13.11.7",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@vitest/coverage-v8": "^1.1.0",
     "@vue/test-utils": "^2.4.3",
