--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "prisma-extension-soft-delete": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^4.2.0",
     "type-graphql": "^2.0.0-beta.3"
