--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -5,9 +5,10 @@
   "collectCoverageFrom": ["src/**/*.ts", "!**/node_modules/**", "!src/index.ts", "!build/**"],
   "coverageThreshold": {
     "global": {
-      "lines": 100,
-      "statements": 100,
-      "functions": 100
+      "statements": 97,
+      "branches": 95,
+      "functions": 93,
+      "lines": 98
     }
   },
   "setupFiles": ["./test/testSetup.ts"],
