--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -3,5 +3,6 @@ BREVO_ADMIN_NAME=""
 BREVO_ADMIN_EMAIL=""
 BREVO_CONTACT_TEMPLATE_ADMIN="1"
 BREVO_CONTACT_TEMPLATE_USER="2"
+BREVO_NEWSLETTER_TEMPLATE_OPTIN="3"
 BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
