--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -1,6 +1,7 @@
 {
   "verbose": true,
   "preset": "ts-jest",
+  "modulePathIgnorePatterns": ["<rootDir>/build/"],
   "collectCoverage": true,
   "collectCoverageFrom": ["src/**/*.ts", "!src/index.ts", "!src/prisma.ts", "!**/node_modules/**", "!build/**"],
   "coverageThreshold": {
