--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,8 +1,9 @@
-BREVO_KEY=""
-BREVO_ADMIN_NAME=""
-BREVO_ADMIN_EMAIL=""
+BREVO_KEY="123"
+BREVO_ADMIN_NAME="Admin"
+BREVO_ADMIN_EMAIL="admin@localhost"
 BREVO_CONTACT_TEMPLATE_ADMIN="1"
 BREVO_CONTACT_TEMPLATE_USER="2"
 BREVO_NEWSLETTER_TEMPLATE_OPTIN="3"
 BREVO_NEWSLETTER_LIST="3"
+BREVO_DEBUG="true"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
