--- a/presenter/tsconfig.json
+++ b/presenter/tsconfig.json
@@ -20,6 +20,7 @@
       "#src/*": ["./src/*"],
       "#plugins/*": ["./renderer/plugins/*"],
       "#context/*": ["./renderer/context/*"],
+      "#tests/*": ["./scripts/tests/*"],
       "#types/*": ["./types/*"],
       "#root/*": ["./*"]
     }
