fix baseURL and default value for meta description

--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -4,3 +4,4 @@ PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 # META
 PUBLIC_ENV__META__DEFAULT_TITLE="DreamMall"
 PUBLIC_ENV__META__DEFAULT_DESCRIPTION="DreamMall Client"
+PUBLIC_ENV__META__BASE_URL="http://localhost:3000
