og title & description, default values

--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -3,5 +3,5 @@ PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 
 # META
 PUBLIC_ENV__META__DEFAULT_TITLE="DreamMall"
-PUBLIC_ENV__META__DEFAULT_DESCRIPTION="DreamMall Client"
+PUBLIC_ENV__META__DEFAULT_DESCRIPTION="Deine Reichweite Erweitern Alle Möglichkeiten Miteinander Ausschöpfen Lebensqualität Leben"
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000
