add LDAP to config

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -6,3 +6,7 @@ BREVO_CONTACT_TEMPLATE_USER="2"
 BREVO_NEWSLETTER_TEMPLATE_OPTIN="3"
 BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
+
+LDAP_URL="ldap://localhost:389"
+LDAP_ADMIN_DN="cn=akadmin,ou=users,dc=ldap,dc=goauthentik,dc=io"
+LDAP_ADMIN_PASSWORD=
