jest ignore logger due to constructor not available

--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -3,7 +3,7 @@
   "preset": "ts-jest",
   "modulePathIgnorePatterns": ["<rootDir>/build/"],
   "collectCoverage": true,
-  "collectCoverageFrom": ["src/**/*.ts", "!src/index.ts", "!src/prisma.ts", "!**/node_modules/**", "!build/**"],
+  "collectCoverageFrom": ["src/**/*.ts", "!src/index.ts", "!src/logger.ts", "!src/prisma.ts", "!**/node_modules/**", "!build/**"],
   "coverageThreshold": {
     "global": {
       "statements": 100,
