--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,28 +1,103 @@
 version: "3.4"
 
 services:
-
-  #########################################################
-  ## MARIADB ##############################################
-  #########################################################
+  ########################################################
+  # DATABASE #############################################
+  ########################################################
   database:
     networks: 
       - internal-net
       - external-net
 
-  # ######################################################
+  ########################################################
+  # PRESENTER ############################################
+  ########################################################
+  presenter:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/presenter:local-development
+    build:
+      target: development
+    ports:
+      # development server port
+      - 24678:24678
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - presenter_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./presenter:/app
+
+  #######################################################
+  # PRESENTER STORYBOOK #################################
+  #######################################################
+  presenter-storybook:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/presenter:local-storybook
+    build:
+      context: ./presenter
+      target: storybook
+    ports:
+      - 6006:6006
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - presenter_storybook_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./presenter:/app
+
+  #######################################################
+  # PRESENTER DOCUMENTATION #############################
+  #######################################################
+  presenter-documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: it4c/frontend:local-documentation
+    build:
+      context: ./presenter
+      target: documentation
+    ports:
+      - 8081:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - presenter_documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./:/app
+
+  #######################################################
+  # BACKEND #############################################
+  #######################################################
+  backend:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: it4c/backend:local-development
+    build:
+      target: development
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - backend_node_modules:/server/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./backend:/server
+
+  ########################################################
   # DOCUMENTATION ########################################
-  # ######################################################
+  ########################################################
   documentation:
     # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
     image: dreammall/dreammall:local-documentation
     build:
       target: documentation
-    environment:
-      - NODE_ENV="development"
-      # - DEBUG=true
     ports:
       - 8080:8080
+    environment:
+      - NODE_ENV=development
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
@@ -30,11 +105,9 @@ services:
       # bind the local folder to the docker to allow live reload
       - ./:/app
 
-  storybook:
-    extends:
-      file: presenter/docker-compose.override.yml
-      service: storybook  
-
 volumes:
-  storybook_node_modules:
+  presenter_node_modules:
+  presenter_storybook_node_modules:
+  presenter_documentation_node_modules:
+  backend_node_modules:
   documentation_node_modules:
