depends on database, corrected documentation path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     build:
       context: ./backend
       target: production
+    depends_on:
+      - database
     networks:
       - external-net
       - internal-net
