--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - MARIADB_USER=root
     networks: 
       - internal-net
+      - external-net
     ports: 
       - 3306:3306
     volumes: 
