--- a/.github/workflows/presenter.test.build.docker.yml
+++ b/.github/workflows/presenter.test.build.docker.yml
@@ -1,4 +1,4 @@
-name: "backend:test:build test docker"
+name: "presenter:test:build test docker"
 
 on: push
 
@@ -6,14 +6,14 @@ jobs:
   # only (but most important) job from this workflow required for pull requests
   # check results serve as run conditions for all other jobs here
   files-changed:
-    name: Detect File Changes - backend-test-build-docker
+    name: Detect File Changes - presenter-test-build-docker
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.backend-test-build-docker }}
+      changes: ${{ steps.changes.outputs.presenter-test-build-docker }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for backend file changes
+      - name: Check for presenter file changes
         uses: dorny/paths-filter@v3.0.1
         id: changes
         with:
@@ -23,30 +23,30 @@ jobs:
 
   build-production:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Docker Production - Backend
+    name: Build Docker Production - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
     env:
-      WORKING_DIRECTORY: ./backend
+      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Backend | Build Docker Production
+      - name: Presenter | Build Docker Production
         run: docker compose -f docker-compose.yml build
         working-directory: ${{env.WORKING_DIRECTORY}}
 
   build-development:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Docker Development - Backend
+    name: Build Docker Development - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
     env:
-      WORKING_DIRECTORY: ./backend
+      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Backend | Build Docker Development
+      - name: Presenter | Build Docker Development
         run: docker compose build
         working-directory: ${{env.WORKING_DIRECTORY}}
