--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,22 +1,41 @@
 version: '3.4'
+
 services:
-  # ######################################################
-  # BACKEND ##############################################
-  # ######################################################
+  #######################################################
+  # BACKEND #############################################
+  #######################################################
   backend:
     # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
     image: it4c/backend:local-development
     build:
       target: development
     environment:
-      - NODE_ENV="development"
-      # - DEBUG=true
+      - NODE_ENV=development
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
       - backend_node_modules:/server/node_modules
       # bind the local folder to the docker to allow live reload
       - ./:/server
+
+  #######################################################
+  # DOCUMENTATION #######################################
+  #######################################################
+  documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: it4c/backend:local-documentation
+    build:
+      target: documentation
+    ports:
+      - 8080:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./:/app
 
 volumes:
   backend_node_modules:
