--- a/presenter/package.json
+++ b/presenter/package.json
@@ -158,6 +158,7 @@
     "#layouts/*": "./src/layouts/*",
     "#stores/*": "./src/stores/*",
     "#mutations/*": "./src/graphql/mutations/*",
+    "#queries/*": "./src/graphql/queries/*",
     "#src/*": "./src/*",
     "#plugins/*": "./renderer/plugins/*",
     "#context/*": "./renderer/context/*",
