--- a/.github/workflows/presenter.test.unit.code.yml
+++ b/.github/workflows/presenter.test.unit.code.yml
@@ -29,6 +29,11 @@ jobs:
     env:
       WORKING_DIRECTORY: ./presenter
     steps:
+      - name: Set Node version
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '>=21'
+
       - name: Checkout code
         uses: actions/checkout@v4
 
